css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Figtree&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: "Montserrat", "Figtree", sans-serif;
    background-color: rgba(49, 49, 49, 0.95);
    color: white;
}

.nav-bar {
    display: flex;
    align-items: center;
    justify-content: space-around;

    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(100px);

    position: sticky;
    top: 0;
}

.main-logo {
    padding: 5px 0 5px 10px;
    height: 6vh;
}

.extra-logos {
    display: flex;
    gap: 2vw;
}

.cart-logo, .search-logo {
    height: 3vh;
    cursor: pointer;
}

#slider {
    display: flex;

    width: 100%;
    padding: 6% 2% 2% 2%;
    gap: 5%;

    overflow-x: auto;
    transition: 2s;
    flex-shrink: 0;
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    scroll-snap-type: x mandatory;
    white-space: nowrap;
}
#slider::-webkit-scrollbar {
    display: none;
}
#slider > img{
    scroll-snap-align: center;

    border-radius: 5px;
    width: 90vw;
}

.slider-dots {
    display: flex;
    justify-content: center;
    gap: 5%;

    margin: 1% 0 3% 0;
}
.dot {
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(100px);

    border-radius: 4vw;
    width: 3vw;
    height: 3vw;
}
.dot:hover {
    cursor: pointer;
}
.current-dot {
    box-shadow:0 0 2px rgba(255, 255, 255, 0.8);
    transition: 0.4s;
}

#suggested {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.top-products-title, .recommended-products-title {
    text-align: center;
    font-size: 1.15rem;
}

.top-products {
    display: flex;
    justify-content: center;

    margin: 1% 0 4% 0;
    gap: 4%;
}

.top-products > img {
    width: 70vw;
    border-radius: 5px;

    box-shadow: 0 0 5px black;
}

.top-product-2, .top-product-3 {
    display: none;
}

.recommended-products {
    display: flex;
    justify-content: space-evenly;

    margin: 2% 0 4% 0;
}

.product {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    color: white;
    background: rgba(0, 0, 0, 0.2);
    box-shadow: 0 0 2px black;

    text-align: center;

    padding: 4vw;
}

.product-title {
    width: 25vw;
}

.product-image {
    width: auto;
    height: 25vw;
    border-radius: 4%
}

.product-price {
    justify-self: flex-end;

    background: orange;

    border-radius: 5px;
    padding: 4%;

    cursor: pointer;
}


.product-price:hover {
    opacity: 0.8;
}
.product-price:active {
    box-shadow: 0 2px 2px black;
}

.product-description-visible, .product-rating-visible {
    display: flex;
}
.product-description-hidden, .product-rating-hidden {
    display: none;
}

.categories {
    margin-top: 4%;
    text-align: center;

    display: grid;
    grid-template-columns: repeat(2, 1fr);

}

.category {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1rem;

    padding: 5%;
}

.category > img{
    width: 8vw;
}

.category > h6{
    white-space: nowrap;
    padding-top: 2vh;
}


.products {
    padding: 3% 3% 2% 3%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 2vw;
    row-gap: 2vw;
}

.products-paging {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2%;
}

.products-paging > div:hover {
    cursor: pointer;
}

.next, .back {
    font-size: 1.5rem;
}


@media (min-width: 554px) and (max-width: 1000px) {
    #slider {
        padding-top: 4%;
        gap: 8%;
    }

    #slider > img{
        height: 25vh;
    }

    .slider-dots {
        gap: 3%;
    }

    .dot {
        width: 2vw;
        height: 2vw;
    }

    .top-product-2 {
        display: flex;
    }
}

@media (min-width: 1001px) {
    #slider {
        padding-top: 1%;
        gap: 6%;
    }

    #slider > img {
        height: 70vh;
    }

    .slider-dots {
        margin: 0.4vh;
    }

    .slider-dots {
        gap: 1%;
    }

    .dot {
        width: 1.3vw;
        height: 1.3vw;
    }

    .top-product-2, .top-product-3 {
        display: flex;
    }
}

